examples/kju/positive/_future_ideas/extended_arythmetic/expression_with_parentheses.kju
fun kju():Unit{
	var x:Int=5-(3+6);
}