examples/kju/negative/typeChecker/assigment_of_wrong_type.kju
fun kju():Unit{
	var x:Bool=5;
}